--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@
 }
 
 h2 {
-    position: relative;
     padding-top: 110px;
     padding-left: 16px;
     font-size: 1.5rem;
@@ -127,5 +126,50 @@ h2::first-letter {
     .main-container {
         width: 100%;
     }
+}
+
+@media (max-width: 920px) and (min-width: 300px) {
+    body {
+        width: 100%;
+    }
+
+    .navbar {
+        justify-content: center;
+        padding: 32px;
+    }
+    
+    .menu-burguer {
+        width: 120px;
+    }
+
+    .nav-sections, .nav-icons {
+        display: none;
+    }
+
+    h2 {
+        padding-top: 150px;
+        padding-left: 32px;
+        font-size: 3rem;
+        font-weight: 700;
+    }
+
+    .main-container {
+        width: 720px;
+    }
+
+    .product {
+        width: 70%;
+    }
+
+    .product-img-container {
+        grid-template-columns: repeat(1, 1fr);
+        place-items: center;
+    }
+
+    .footer {
+        width: 100%;
+    }
+    
+
 }
 
