--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,18 @@
 
 .nav-sections, .nav-icons {
     display: flex;
+    flex-wrap: nowrap;
 }
 
-.nav-sections > a {
+.nav-sections > .section {
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-sections > .section > a {
     text-decoration: none;
     color: #212429;
-    padding: 8px;
+    padding: 16px;
 }
 
 .nav-icons > img {
@@ -57,7 +63,6 @@ h2::first-letter {
     padding: 0px 64px 0px 64px;
 }
 
-
 .product {
     padding: 32px;
 }
@@ -69,7 +74,7 @@ h2::first-letter {
 
 .product-info {
     display: grid;
-    grid-template-columns: repeat(1 auto);
+    grid-template-columns: auto;
     padding: 16px;
 
 }
@@ -108,21 +113,32 @@ h2::first-letter {
     border-radius: 50%; 
     padding: 8px;
     background-color: #fff; 
-    border: 2px solid #000; 
+    border: 2px solid #ffffff; 
     display: inline-flex; 
     justify-content: center; 
     align-items: center;
 }
 
-@media (min-width: 921px) and (max-width: 1067px ) {
+@media (min-width: 1100px) and (max-width: 1279px) {
 
-    .nav-sections > a {
-        font-size: 12px;
-    }
+    .nav-sections > .section > a {
+        font-size: 14px;
+}
+     .nav-icons {
+       height: 90px;;
+     }
 
-    .nav-icons {
-        height: 85px;
-    }
+}
+
+@media (min-width: 921px) and (max-width: 1099px ) {
+
+    .nav-sections > .section > a {
+        font-size: 10px;
+}
+     .nav-icons {
+       height: 85px;;
+     }
+
 }
 
 @media (max-width: 920px) {
